--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
-    "presets": ["env", "react", "typescript"],
+    "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
     "plugins": [
-        "prettier",
-        "proposal-class-properties",
-        "proposal-optional-chaining"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-optional-chaining"
     ],
     "ignore": ["node_modules"]
 }
