--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "start": "cross-env NODE_ENV=development run-p open:src test:watch",
         "prebuild": "npm run lint && npm test && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
+        "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
-        "open:dist": "babel-node config/distServer",
-        "open:src": "babel-node config/srcServer",
+        "open:dist": "cross-env PORT=9001 babel-node config/distServer",
+        "open:src": "cross-env PORT=9000 babel-node config/srcServer",
         "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
@@ -27,11 +28,12 @@
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "dependencies": {
         "@babel/polyfill": "^7.2.5",
+        "antd": "^3.13.2",
         "axios": "^0.18.0",
-        "connected-react-router": "^6.2.2",
+        "connected-react-router": "^6.3.0",
         "history": "^4.7.2",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1",
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.1",
@@ -47,23 +49,24 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
         "@types/acorn": "^4.0.4",
+        "@types/antd": "^1.0.0",
         "@types/autoprefixer": "^9.1.1",
         "@types/axios": "^0.14.0",
         "@types/chalk": "^2.2.0",
-        "@types/enzyme": "^3.1.16",
+        "@types/enzyme": "^3.1.17",
         "@types/enzyme-adapter-react-16": "^1.0.3",
         "@types/enzyme-to-json": "^1.5.2",
         "@types/eslint": "^4.16.6",
         "@types/eslint-plugin-prettier": "^2.2.0",
         "@types/history": "^4.7.2",
         "@types/html-webpack-plugin": "^3.2.0",
-        "@types/jest": "^23.3.13",
+        "@types/jest": "^24.0.0",
         "@types/jest-cli": "^23.6.0",
         "@types/jsdom": "^12.2.1",
         "@types/node-sass": "^3.10.32",
-        "@types/prettier": "^1.15.2",
-        "@types/react": "^16.8.1",
-        "@types/react-dom": "^16.0.11",
+        "@types/prettier": "^1.16.0",
+        "@types/react": "^16.8.2",
+        "@types/react-dom": "^16.8.0",
         "@types/react-hot-loader": "^4.1.0",
         "@types/react-redux": "^7.0.1",
         "@types/react-router-dom": "^4.3.1",
@@ -77,20 +80,21 @@
         "@types/typescript": "^2.0.0",
         "@types/webpack": "^4.4.24",
         "@types/webpack-bundle-analyzer": "^2.13.0",
-        "@typescript-eslint/eslint-plugin": "^1.2.0",
-        "@typescript-eslint/parser": "^1.2.0",
-        "acorn": "^6.0.6",
+        "@types/webpack-dev-server": "^3.1.2",
+        "@typescript-eslint/eslint-plugin": "^1.3.0",
+        "@typescript-eslint/parser": "^1.3.0",
+        "acorn": "^6.1.0",
         "autoprefixer": "^9.4.7",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^24.0.0",
+        "babel-jest": "^24.1.0",
         "babel-loader": "^8.0.5",
         "chalk": "^2.4.2",
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.0",
         "documentation": "^9.1.1",
         "enzyme": "^3.8.0",
-        "enzyme-adapter-react-16": "^1.8.0",
+        "enzyme-adapter-react-16": "^1.9.1",
         "enzyme-to-json": "^3.3.5",
         "eslint": "^5.13.0",
         "eslint-config-airbnb": "^17.1.0",
@@ -98,15 +102,15 @@
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-jest": "^22.2.2",
         "eslint-plugin-jsdoc": "^4.1.0",
-        "eslint-plugin-jsx-a11y": "^6.2.0",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^1.3.1",
-        "jest": "^24.0.0",
-        "jest-cli": "^24.0.0",
+        "jest": "^24.1.0",
+        "jest-cli": "^24.1.0",
         "jsdom": "^13.2.0",
         "node-sass": "^4.11.0",
         "npm-run-all": "^4.1.5",
@@ -122,11 +126,12 @@
         "style-loader": "^0.23.1",
         "stylelint": "^9.10.1",
         "stylelint-config-recommended": "^2.1.0",
-        "typescript": "^3.3.1",
+        "typescript": "^3.3.3",
         "url-loader": "^1.1.2",
-        "webpack": "^4.29.0",
+        "webpack": "^4.29.3",
         "webpack-bundle-analyzer": "^3.0.3",
-        "webpack-cli": "^3.2.1"
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.1.14"
     },
     "browserslist": [
         "> .5%",
@@ -139,7 +144,9 @@
         "coveragePathIgnorePatterns": [
             "src/index.tsx"
         ],
-        "setupTestFrameworkScriptFile": "<rootDir>/config/enzymeSetup.js",
+        "setupFilesAfterEnv": [
+            "<rootDir>/config/enzymeSetup.js"
+        ],
         "moduleNameMapper": {
             "\\.(jpg|jpeg|png|gif|ico|woff|woff2|svg|ttf|eot)$": "<rootDir>/config/assetsTransformer.js",
             "^.+\\.(css|scss)$": "<rootDir>/config/assetsTransformer.js"
