--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
     "plugins": [
+        "react-hot-loader/babel",
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-optional-chaining"
     ],
