--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "author": "Piotr Piech <piotr@hadron.design>",
     "license": "UNLICENSED",
-    "description": "TypeScript + Babel + ESLint | React + Redux + Jest | Opinionated boilerplate",
+    "description": "Boilerplate | React + Redux + Jest + 🔥 reload | TypeScript parsed with Babel 7 | ESLint + typescript-eslint",
     "scripts": {
         "start": "cross-env NODE_ENV=development run-p open:src test:watch",
         "prebuild": "npm run lint && npm test && npm run cleanDist",
@@ -12,7 +12,7 @@
         "cleanDist": "rimraf ./dist && mkdir dist",
         "open:dist": "cross-env PORT=9001 babel-node config/distServer",
         "open:src": "cross-env PORT=9000 babel-node config/srcServer",
-        "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss",
+        "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
         "test:watch": "npm run test -- --watch",
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "dependencies": {
         "@babel/polyfill": "^7.2.5",
+        "@types/styled-components": "^4.1.8",
         "antd": "^3.13.2",
         "axios": "^0.18.0",
         "connected-react-router": "^6.3.0",
@@ -38,7 +39,8 @@
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0"
+        "reselect": "^4.0.0",
+        "styled-components": "^4.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
@@ -126,6 +128,8 @@
         "style-loader": "^0.23.1",
         "stylelint": "^9.10.1",
         "stylelint-config-recommended": "^2.1.0",
+        "stylelint-config-styled-components": "^0.1.1",
+        "stylelint-processor-styled-components": "^1.5.2",
         "typescript": "^3.3.3",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.3",
@@ -134,8 +138,10 @@
         "webpack-dev-server": "^3.1.14"
     },
     "browserslist": [
-        "> .5%",
-        "IE 11"
+        "> 0.5%",
+        "not dead",
+        "not IE <= 11",
+        "not op_mini all"
     ],
     "jest": {
         "collectCoverageFrom": [
