--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "axios": "^0.18.0",
         "connected-react-router": "^6.3.0",
         "history": "^4.7.2",
+        "normalize.css": "^8.0.1",
         "react": "^16.8.1",
         "react-dom": "^16.8.1",
         "react-redux": "^6.0.0",
@@ -81,7 +82,6 @@
         "@types/stylelint": "^9.4.1",
         "@types/typescript": "^2.0.0",
         "@types/webpack": "^4.4.24",
-        "@types/webpack-bundle-analyzer": "^2.13.0",
         "@types/webpack-dev-server": "^3.1.2",
         "@typescript-eslint/eslint-plugin": "^1.3.0",
         "@typescript-eslint/parser": "^1.3.0",
