babel eslint working 100%

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "author": "Piotr Piech <piotr@hadron.design>",
     "license": "UNLICENSED",
-    "description": "Boilerplate | React + Redux + Jest + 🔥 reload | TypeScript parsed with Babel 7 | ESLint + typescript-eslint",
+    "description": "Boilerplate | React + Redux + Jest + 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
     "scripts": {
         "start": "cross-env NODE_ENV=development run-p open:src test:watch",
         "prebuild": "npm run lint && npm test && npm run cleanDist",
@@ -101,6 +101,7 @@
         "eslint": "^5.13.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-prettier": "^4.0.0",
+        "eslint-import-resolver-typescript": "^1.1.1",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-jest": "^22.2.2",
         "eslint-plugin-jsdoc": "^4.1.0",
@@ -119,6 +120,7 @@
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.16.4",
+        "prettier-eslint": "^8.8.2",
         "react-hot-loader": "^4.6.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
