--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
         "open:dist": "cross-env NODE_ENV=development PORT=4000 babel-node config/distServer",
-        "open:src": "cross-env NODE_ENV=production PORT=3000 babel-node config/srcServer",
+        "open:src": "cross-env NODE_ENV=development PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
         "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
@@ -51,6 +51,7 @@
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.1.0",
+        "@hot-loader/react-dom": "^16.8.1",
         "@types/acorn": "^4.0.4",
         "@types/antd": "^1.0.0",
         "@types/autoprefixer": "^9.1.1",
@@ -109,6 +110,7 @@
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-react-hooks": "^1.0.1",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
@@ -121,7 +123,6 @@
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.16.4",
-        "prettier-eslint": "^8.8.2",
         "react-hot-loader": "^4.6.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
@@ -134,6 +135,7 @@
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.5.2",
         "typescript": "^3.3.3",
+        "typescript-styled-plugin": "^0.13.0",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.3",
         "webpack-bundle-analyzer": "^3.0.3",
