--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
-        "open:dist": "cross-env NODE_ENV=development PORT=4000 babel-node config/distServer",
-        "open:src": "cross-env NODE_ENV=development PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
+        "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
+        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
         "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
