--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "Boilerplate | React + Redux + Jest + 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
     "scripts": {
         "start": "cross-env NODE_ENV=development run-p open:src test:watch",
-        "prebuild": "npm run lint && npm test && npm run cleanDist",
+        "prebuild": "npm run lint && npm test && tsc && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
@@ -27,120 +27,124 @@
     },
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "dependencies": {
-        "@babel/polyfill": "^7.2.5",
-        "@types/styled-components": "^4.1.10",
-        "antd": "^3.13.5",
+        "@babel/polyfill": "^7.4.4",
+        "@types/npm": "^2.0.30",
+        "@types/react-router": "^4.4.5",
+        "@types/styled-components": "^4.1.14",
+        "antd": "^3.16.6",
         "axios": "^0.18.0",
-        "connected-react-router": "^6.3.1",
-        "history": "^4.7.2",
+        "connected-react-router": "^6.4.0",
+        "history": "^4.9.0",
         "normalize.css": "^8.0.1",
-        "react": "^16.8.2",
-        "react-dom": "^16.8.2",
+        "npm": "^6.9.0",
+        "react": "16.8.6",
+        "react-dom": "16.8.6",
         "react-redux": "^6.0.1",
-        "react-router-dom": "^4.3.1",
+        "react-router": "^5.0.0",
+        "react-router-dom": "^5.0.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.1.3"
+        "styled-components": "^4.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.3.3",
+        "@babel/core": "^7.4.4",
         "@babel/node": "^7.2.2",
-        "@babel/plugin-proposal-class-properties": "^7.3.3",
+        "@babel/plugin-proposal-class-properties": "^7.4.4",
         "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-env": "^7.4.4",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@hot-loader/react-dom": "^16.8.2",
+        "@hot-loader/react-dom": "16.8.6",
         "@types/acorn": "^4.0.5",
         "@types/antd": "^1.0.0",
-        "@types/autoprefixer": "^9.1.1",
+        "@types/autoprefixer": "^9.5.0",
         "@types/axios": "^0.14.0",
         "@types/chalk": "^2.2.0",
-        "@types/enzyme": "^3.1.18",
-        "@types/enzyme-adapter-react-16": "^1.0.4",
-        "@types/enzyme-to-json": "^1.5.2",
+        "@types/enzyme": "^3.9.1",
+        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/enzyme-to-json": "^1.5.3",
         "@types/eslint": "^4.16.6",
         "@types/eslint-plugin-prettier": "^2.2.0",
         "@types/history": "^4.7.2",
         "@types/html-webpack-plugin": "^3.2.0",
-        "@types/jest": "^24.0.6",
+        "@types/jest": "^24.0.12",
         "@types/jest-cli": "^23.6.0",
-        "@types/jsdom": "^12.2.2",
-        "@types/node-sass": "^3.10.32",
-        "@types/prettier": "^1.16.1",
-        "@types/react": "^16.8.4",
-        "@types/react-dom": "^16.8.2",
+        "@types/jsdom": "^12.2.3",
+        "@types/node-sass": "^4.11.0",
+        "@types/prettier": "^1.16.3",
+        "@types/react": "^16.8.16",
+        "@types/react-dom": "^16.8.4",
         "@types/react-hot-loader": "^4.1.0",
-        "@types/react-redux": "^7.0.1",
-        "@types/react-router-dom": "^4.3.1",
+        "@types/react-redux": "^7.0.8",
+        "@types/react-router-dom": "^4.3.2",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-logger": "^3.0.7",
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.2",
-        "@types/stylelint": "^9.4.2",
+        "@types/stylelint": "^9.10.0",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.4.24",
-        "@types/webpack-dev-server": "^3.1.2",
-        "@typescript-eslint/eslint-plugin": "^1.4.0",
-        "@typescript-eslint/parser": "^1.4.0",
-        "acorn": "^6.1.0",
-        "autoprefixer": "^9.4.8",
+        "@types/webpack": "^4.4.29",
+        "@types/webpack-dev-server": "^3.1.5",
+        "@typescript-eslint/eslint-plugin": "^1.7.0",
+        "@typescript-eslint/parser": "^1.7.0",
+        "acorn": "^6.1.1",
+        "autoprefixer": "^9.5.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^24.1.0",
+        "babel-jest": "^24.7.1",
         "babel-loader": "^8.0.5",
         "babel-plugin-module-resolver": "^3.2.0",
         "chalk": "^2.4.2",
         "cross-env": "^5.2.0",
-        "css-loader": "^2.1.0",
-        "documentation": "^9.1.1",
+        "css-loader": "^2.1.1",
+        "documentation": "^10.1.0",
         "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.9.1",
+        "enzyme-adapter-react-16": "^1.12.1",
         "enzyme-to-json": "^3.3.5",
-        "eslint": "^5.14.1",
+        "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.0",
-        "eslint-config-prettier": "^4.0.0",
+        "eslint-config-prettier": "^4.2.0",
         "eslint-import-resolver-typescript": "^1.1.1",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-jest": "^22.3.0",
-        "eslint-plugin-jsdoc": "^4.1.0",
+        "eslint-plugin-import": "^2.17.2",
+        "eslint-plugin-jest": "^22.5.1",
+        "eslint-plugin-jsdoc": "^4.8.3",
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "^7.12.4",
-        "eslint-plugin-react-hooks": "^1.0.2",
+        "eslint-plugin-react": "^7.13.0",
+        "eslint-plugin-react-hooks": "^1.6.0",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^1.3.1",
-        "jest": "^24.1.0",
-        "jest-cli": "^24.1.0",
-        "jsdom": "^13.2.0",
-        "node-sass": "^4.11.0",
+        "husky": "^2.2.0",
+        "jest": "^24.7.1",
+        "jest-cli": "^24.7.1",
+        "jsdom": "^15.0.0",
+        "node-sass": "^4.12.0",
         "npm-run-all": "^4.1.5",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.16.4",
-        "react-hot-loader": "^4.7.1",
+        "prettier": "^1.17.0",
+        "react-hot-loader": "^4.8.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "regenerator-runtime": "^0.13.1",
+        "regenerator-runtime": "^0.13.2",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
-        "stylelint": "^9.10.1",
-        "stylelint-config-recommended": "^2.1.0",
+        "stylelint": "^10.0.1",
+        "stylelint-config-recommended": "^2.2.0",
         "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.5.2",
-        "typescript": "^3.3.3",
-        "typescript-styled-plugin": "^0.13.0",
+        "stylelint-processor-styled-components": "^1.6.0",
+        "typescript": "^3.4.5",
+        "typescript-styled-plugin": "^0.14.0",
         "url-loader": "^1.1.2",
-        "webpack": "^4.29.5",
-        "webpack-bundle-analyzer": "^3.0.4",
-        "webpack-cli": "^3.2.3",
-        "webpack-dev-server": "^3.2.0"
+        "webpack": "^4.30.0",
+        "webpack-bundle-analyzer": "^3.3.2",
+        "webpack-cli": "^3.3.2",
+        "webpack-dev-server": "^3.3.1"
     },
     "browserslist": [
         "> 0.5%",
@@ -169,7 +173,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-push": "npm run lint && npm test"
+            "pre-push": "npm run lint && tsc && npm test"
         }
     }
 }
