moved global styles to styled-components

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -23,8 +23,7 @@
         "msjsdiag.debugger-for-chrome",
         "NuclleaR.vscode-extension-auto-import",
         "rbbit.typescript-hero",
-        "robertohuertasm.vscode-icons",
-        "robinbentley.sass-indented",
+        "vscode-icons-team.vscode-icons",
         "Shan.code-settings-sync",
         "shinnn.stylelint",
         "streetsidesoftware.code-spell-checker",
