--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,7 @@
     "processors": ["stylelint-processor-styled-components"],
     "extends": [
         "stylelint-config-recommended",
-        "stylelint-config-styled-components"
+        "stylelint-config-styled-components",
+        "stylelint-config-prettier"
     ]
 }
