--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "license": "UNLICENSED",
     "description": "Boilerplate | React + Redux + Jest + 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
     "scripts": {
-        "start": "cross-env NODE_ENV=development run-p open:src test:watch",
+        "start": "cross-env NODE_ENV=development npm run open:src",
         "prebuild": "npm run lint && npm test && tsc && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
         "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
         "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
-        "lint": "eslint src config --ext js,jsx,ts,tsx && stylelint **/*.scss **/*.jsx **/*.js **/*.ts **/*.tsx",
+        "lint": "npm run eslint && npm run stylelint",
+        "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
+        "eslint": "eslint src config --ext js,jsx,ts,tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
         "test:watch": "npm run test -- --watch",
@@ -28,11 +30,8 @@
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
-        "@types/npm": "^2.0.30",
-        "@types/react-router": "^4.4.5",
-        "@types/styled-components": "^4.1.14",
-        "antd": "^3.16.6",
         "axios": "^0.18.0",
+        "bootstrap": "^4.3.1",
         "connected-react-router": "^6.4.0",
         "history": "^4.9.0",
         "normalize.css": "^8.0.1",
@@ -56,10 +55,9 @@
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@hot-loader/react-dom": "16.8.6",
-        "@types/acorn": "^4.0.5",
-        "@types/antd": "^1.0.0",
         "@types/autoprefixer": "^9.5.0",
         "@types/axios": "^0.14.0",
+        "@types/bootstrap": "^4.3.0",
         "@types/chalk": "^2.2.0",
         "@types/enzyme": "^3.9.1",
         "@types/enzyme-adapter-react-16": "^1.0.5",
@@ -72,11 +70,13 @@
         "@types/jest-cli": "^23.6.0",
         "@types/jsdom": "^12.2.3",
         "@types/node-sass": "^4.11.0",
+        "@types/npm": "^2.0.30",
         "@types/prettier": "^1.16.3",
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-hot-loader": "^4.1.0",
         "@types/react-redux": "^7.0.8",
+        "@types/react-router": "^4.4.5",
         "@types/react-router-dom": "^4.3.2",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
@@ -84,13 +84,13 @@
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.2",
+        "@types/styled-components": "^4.1.14",
         "@types/stylelint": "^9.10.0",
         "@types/typescript": "^2.0.0",
         "@types/webpack": "^4.4.29",
         "@types/webpack-dev-server": "^3.1.5",
         "@typescript-eslint/eslint-plugin": "^1.7.0",
         "@typescript-eslint/parser": "^1.7.0",
-        "acorn": "^6.1.1",
         "autoprefixer": "^9.5.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.1",
@@ -123,18 +123,18 @@
         "jest-cli": "^24.7.1",
         "jsdom": "^15.0.0",
         "node-sass": "^4.12.0",
-        "npm-run-all": "^4.1.5",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.17.0",
+        "prettier-stylelint": "^0.4.2",
         "react-hot-loader": "^4.8.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "regenerator-runtime": "^0.13.2",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "stylelint": "^10.0.1",
+        "stylelint-config-prettier": "^5.1.0",
         "stylelint-config-recommended": "^2.2.0",
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.6.0",
