--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
         "prebuild": "npm run lint && npm test && tsc && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
+        "build:quick": "cross-env NODE_ENV=production babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
         "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
         "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
         "lint": "npm run eslint && npm run stylelint",
-        "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "eslint": "eslint src config --ext js,jsx,ts,tsx",
+        "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
         "test:watch": "npm run test -- --watch",
@@ -34,7 +35,6 @@
         "bootstrap": "^4.3.1",
         "connected-react-router": "^6.4.0",
         "history": "^4.9.0",
-        "normalize.css": "^8.0.1",
         "npm": "^6.9.0",
         "react": "16.8.6",
         "react-dom": "16.8.6",
@@ -59,50 +59,50 @@
         "@types/axios": "^0.14.0",
         "@types/bootstrap": "^4.3.0",
         "@types/chalk": "^2.2.0",
-        "@types/enzyme": "^3.9.1",
+        "@types/enzyme": "^3.9.2",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/enzyme-to-json": "^1.5.3",
         "@types/eslint": "^4.16.6",
         "@types/eslint-plugin-prettier": "^2.2.0",
         "@types/history": "^4.7.2",
         "@types/html-webpack-plugin": "^3.2.0",
-        "@types/jest": "^24.0.12",
+        "@types/jest": "^24.0.13",
         "@types/jest-cli": "^23.6.0",
         "@types/jsdom": "^12.2.3",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.30",
-        "@types/prettier": "^1.16.3",
-        "@types/react": "^16.8.16",
+        "@types/prettier": "^1.16.4",
+        "@types/react": "^16.8.17",
         "@types/react-dom": "^16.8.4",
         "@types/react-hot-loader": "^4.1.0",
-        "@types/react-redux": "^7.0.8",
-        "@types/react-router": "^4.4.5",
-        "@types/react-router-dom": "^4.3.2",
+        "@types/react-redux": "^7.0.9",
+        "@types/react-router": "^5.0.0",
+        "@types/react-router-dom": "^4.3.3",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-logger": "^3.0.7",
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.2",
-        "@types/styled-components": "^4.1.14",
+        "@types/styled-components": "^4.1.15",
         "@types/stylelint": "^9.10.0",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.4.29",
+        "@types/webpack": "^4.4.31",
         "@types/webpack-dev-server": "^3.1.5",
-        "@typescript-eslint/eslint-plugin": "^1.7.0",
-        "@typescript-eslint/parser": "^1.7.0",
+        "@typescript-eslint/eslint-plugin": "^1.9.0",
+        "@typescript-eslint/parser": "^1.9.0",
         "autoprefixer": "^9.5.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.1",
-        "babel-jest": "^24.7.1",
-        "babel-loader": "^8.0.5",
+        "babel-jest": "^24.8.0",
+        "babel-loader": "^8.0.6",
         "babel-plugin-module-resolver": "^3.2.0",
         "chalk": "^2.4.2",
         "cross-env": "^5.2.0",
         "css-loader": "^2.1.1",
-        "documentation": "^10.1.0",
+        "documentation": "^11.0.0",
         "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.12.1",
+        "enzyme-adapter-react-16": "^1.13.0",
         "enzyme-to-json": "^3.3.5",
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.0",
@@ -110,22 +110,22 @@
         "eslint-import-resolver-typescript": "^1.1.1",
         "eslint-plugin-import": "^2.17.2",
         "eslint-plugin-jest": "^22.5.1",
-        "eslint-plugin-jsdoc": "^4.8.3",
+        "eslint-plugin-jsdoc": "^5.0.2",
         "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-prettier": "^3.0.1",
+        "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.13.0",
         "eslint-plugin-react-hooks": "^1.6.0",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^2.2.0",
-        "jest": "^24.7.1",
-        "jest-cli": "^24.7.1",
-        "jsdom": "^15.0.0",
+        "husky": "^2.3.0",
+        "jest": "^24.8.0",
+        "jest-cli": "^24.8.0",
+        "jsdom": "^15.1.0",
         "node-sass": "^4.12.0",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.17.0",
+        "prettier": "^1.17.1",
         "prettier-stylelint": "^0.4.2",
         "react-hot-loader": "^4.8.4",
         "redux-devtools-extension": "^2.13.8",
@@ -137,11 +137,11 @@
         "stylelint-config-prettier": "^5.1.0",
         "stylelint-config-recommended": "^2.2.0",
         "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.6.0",
+        "stylelint-processor-styled-components": "^1.7.0",
         "typescript": "^3.4.5",
         "typescript-styled-plugin": "^0.14.0",
         "url-loader": "^1.1.2",
-        "webpack": "^4.30.0",
+        "webpack": "^4.31.0",
         "webpack-bundle-analyzer": "^3.3.2",
         "webpack-cli": "^3.3.2",
         "webpack-dev-server": "^3.3.1"
@@ -149,7 +149,7 @@
     "browserslist": [
         "> 0.5%",
         "not dead",
-        "not IE <= 11",
+        "not IE < 11",
         "not op_mini all"
     ],
     "jest": {
