--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": "./src/",
         "target": "es5",
+        "lib": ["es2015"],
         "module": "esnext",
         "moduleResolution": "node",
         "removeComments": true,
