--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,28 @@
 {
     "css.validate": false,
     "scss.validate": false,
-    "eslint.autoFixOnSave": true,
     "editor.formatOnSave": true,
     "prettier.stylelintIntegration": true,
     "prettier.eslintIntegration": true,
     "files.insertFinalNewline": true,
     "typescript.tsdk": "node_modules\\typescript\\lib",
+    "eslint.autoFixOnSave": true,
     "eslint.validate": [
         "javascript",
         "javascriptreact",
-        "typescript",
-        "typescriptreact"
-    ]
+        { "language": "typescript", "autoFix": true },
+        { "language": "typescriptreact", "autoFix": true }
+    ],
+    "[javascript]": {
+        "editor.formatOnSave": false
+    },
+    "[javascriptreact]": {
+        "editor.formatOnSave": false
+    },
+    "[typescript]": {
+        "editor.formatOnSave": false
+    },
+    "[typescriptreact]": {
+        "editor.formatOnSave": false
+    }
 }
