--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "@types/webpack": "^4.4.31",
         "@types/webpack-bundle-analyzer": "^2.13.1",
         "@types/webpack-dev-server": "^3.1.5",
+        "@types/webpack-env": "^1.13.9",
         "@typescript-eslint/eslint-plugin": "^1.9.0",
         "@typescript-eslint/parser": "^1.9.0",
         "autoprefixer": "^9.5.1",
