--- a/package.json
+++ b/package.json
@@ -34,54 +34,53 @@
     "dependencies": {
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
-        "connected-react-router": "^6.4.0",
-        "core-js": "^3.1.3",
+        "connected-react-router": "^6.5.2",
+        "core-js": "^3.1.4",
         "history": "^4.9.0",
-        "npm": "^6.9.0",
+        "npm": "^6.10.2",
         "react": "16.8.6",
         "react-dom": "16.8.6",
         "react-helmet": "^6.0.0-beta",
-        "react-redux": "^6.0.1",
+        "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "redux": "^4.0.1",
+        "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.3.1"
+        "styled-components": "^4.3.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.5",
-        "@babel/node": "^7.4.5",
-        "@babel/plugin-proposal-class-properties": "^7.4.4",
+        "@babel/core": "^7.5.5",
+        "@babel/node": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-        "@babel/preset-env": "^7.4.5",
+        "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
         "@hot-loader/react-dom": "16.8.6",
         "@types/autoprefixer": "^9.5.0",
         "@types/axios": "^0.14.0",
-        "@types/bootstrap": "^4.3.0",
+        "@types/bootstrap": "^4.3.1",
         "@types/chalk": "^2.2.0",
-        "@types/core-js": "^2.5.1",
-        "@types/enzyme": "^3.9.3",
+        "@types/core-js": "^2.5.2",
+        "@types/enzyme": "^3.10.3",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/enzyme-to-json": "^1.5.3",
         "@types/eslint": "^4.16.6",
         "@types/eslint-plugin-prettier": "^2.2.0",
         "@types/history": "^4.7.2",
-        "@types/html-webpack-plugin": "^3.2.0",
-        "@types/jest": "^24.0.14",
+        "@types/html-webpack-plugin": "^3.2.1",
+        "@types/jest": "^24.0.16",
         "@types/jest-cli": "^23.6.0",
-        "@types/jsdom": "^12.2.3",
+        "@types/jsdom": "^12.2.4",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.30",
-        "@types/prettier": "^1.16.4",
-        "@types/react": "^16.8.20",
-        "@types/react-dom": "^16.8.4",
+        "@types/react": "^16.8.23",
+        "@types/react-dom": "^16.8.5",
         "@types/react-helmet": "^5.0.8",
         "@types/react-hot-loader": "^4.1.0",
-        "@types/react-redux": "^7.1.0",
-        "@types/react-router": "^5.0.2",
+        "@types/react-redux": "^7.1.1",
+        "@types/react-router": "^5.0.3",
         "@types/react-router-dom": "^4.3.4",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
@@ -89,52 +88,51 @@
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.2",
-        "@types/styled-components": "^4.1.16",
-        "@types/stylelint": "^9.10.0",
+        "@types/styled-components": "^4.1.18",
+        "@types/stylelint": "^9.10.1",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.4.32",
-        "@types/webpack-bundle-analyzer": "^2.13.1",
-        "@types/webpack-dev-server": "^3.1.6",
-        "@types/webpack-env": "^1.13.9",
-        "@typescript-eslint/eslint-plugin": "^1.10.2",
-        "@typescript-eslint/parser": "^1.10.2",
-        "autoprefixer": "^9.6.0",
+        "@types/webpack": "^4.32.1",
+        "@types/webpack-bundle-analyzer": "^2.13.2",
+        "@types/webpack-dev-server": "^3.1.7",
+        "@types/webpack-env": "^1.14.0",
+        "@typescript-eslint/eslint-plugin": "^1.13.0",
+        "@typescript-eslint/parser": "^1.13.0",
+        "autoprefixer": "^9.6.1",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "^10.0.1",
+        "babel-eslint": "^10.0.2",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-module-resolver": "^3.2.0",
         "chalk": "^2.4.2",
         "cross-env": "^5.2.0",
-        "css-loader": "^3.0.0",
+        "css-loader": "^3.1.0",
         "documentation": "^11.0.1",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "enzyme-to-json": "^3.3.5",
         "eslint": "^5.16.0",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-config-prettier": "^5.0.0",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-config-prettier": "^6.0.0",
         "eslint-import-resolver-typescript": "^1.1.1",
-        "eslint-plugin-import": "^2.17.3",
-        "eslint-plugin-jest": "^22.6.4",
-        "eslint-plugin-jsdoc": "^8.0.1",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jest": "^22.14.0",
+        "eslint-plugin-jsdoc": "^15.8.0",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.13.0",
-        "eslint-plugin-react-hooks": "^1.6.0",
+        "eslint-plugin-react": "^7.14.3",
+        "eslint-plugin-react-hooks": "^1.6.1",
         "eventsource-polyfill": "^0.9.6",
-        "file-loader": "^4.0.0",
+        "file-loader": "^4.1.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^2.4.1",
+        "husky": "^3.0.2",
         "jest": "^24.8.0",
         "jest-cli": "^24.8.0",
         "jsdom": "^15.1.1",
         "node-sass": "^4.12.0",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.18.2",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.11.0",
+        "react-hot-loader": "^4.12.10",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
         "rimraf": "^2.6.3",
@@ -145,13 +143,12 @@
         "stylelint-config-recommended": "^2.2.0",
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.8.0",
-        "typescript": "^3.5.2",
-        "typescript-styled-plugin": "^0.14.0",
-        "url-loader": "^2.0.0",
-        "webpack": "^4.34.0",
-        "webpack-bundle-analyzer": "^3.3.2",
-        "webpack-cli": "^3.3.4",
-        "webpack-dev-server": "^3.7.1"
+        "typescript": "^3.5.3",
+        "url-loader": "^2.1.0",
+        "webpack": "^4.38.0",
+        "webpack-bundle-analyzer": "^3.4.1",
+        "webpack-cli": "^3.3.6",
+        "webpack-dev-server": "^3.7.2"
     },
     "browserslist": [
         "> 0.5%",
@@ -180,7 +177,8 @@
     },
     "husky": {
         "hooks": {
-            "pre-push": "npm run tsc && npm run lint && npm test"
+            "pre-commit": "npm run tsc && npm run lint",
+            "pre-push": "npm test"
         }
     }
 }
