--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "baseUrl": "./src/",
         "target": "es5",
-        "lib": ["es2015"],
+        "lib": [
+            "es2015"
+        ],
         "module": "esnext",
         "moduleResolution": "node",
         "removeComments": true,
@@ -18,12 +20,14 @@
         "noEmit": true,
         "esModuleInterop": true,
         "isolatedModules": true,
-        "plugins": [
-            {
-                "name": "typescript-styled-plugin"
-            }
-        ]
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx"],
-    "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "**/*.snap"]
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.tsx"
+    ],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.spec.tsx",
+        "**/*.snap"
+    ]
 }
