--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "reactplate",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "Piotr Piech <piotr@hadron.design>",
-    "license": "UNLICENSED",
+    "license": "MIT",
     "description": "TypeScript parsed with Babel 7 | React, Redux, Jest & 🔥 reload | ESLint + @typescript-eslint",
     "scripts": {
         "postinstall": "rimraf ./node_modules/@types/react-native",
@@ -20,8 +20,7 @@
         "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
-        "test:watch": "npm run test -- --watch",
-        "docs": "documentation build src/** -f html -o docs"
+        "test:watch": "npm run test -- --watch"
     },
     "repository": {
         "type": "git",
@@ -106,7 +105,6 @@
         "chalk": "^2.4.2",
         "cross-env": "^5.2.0",
         "css-loader": "^3.1.0",
-        "documentation": "^11.0.1",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "enzyme-to-json": "^3.3.5",
@@ -114,9 +112,9 @@
         "eslint-config-airbnb": "^17.1.1",
         "eslint-config-prettier": "^6.0.0",
         "eslint-import-resolver-typescript": "^1.1.1",
+        "eslint-plugin-html": "^6.0.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jest": "^22.14.0",
-        "eslint-plugin-jsdoc": "^15.8.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.14.3",
