--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
         "baseUrl": "./src/",
+        "jsx": "react",
         "target": "es5",
-        "lib": [
-            "es2015"
-        ],
+        "lib": ["es2015"],
         "module": "esnext",
         "moduleResolution": "node",
         "removeComments": true,
@@ -15,19 +14,11 @@
         "noUnusedLocals": true,
         "strict": true,
         "sourceMap": true,
-        "jsx": "react",
         "allowJs": true,
         "noEmit": true,
         "esModuleInterop": true,
-        "isolatedModules": true,
+        "isolatedModules": true
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx"
-    ],
-    "exclude": [
-        "**/*.spec.ts",
-        "**/*.spec.tsx",
-        "**/*.snap"
-    ]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "**/*.snap"]
 }
