--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "postinstall": "rimraf ./node_modules/@types/react-native",
         "start": "cross-env NODE_ENV=development npm run open:src",
+        "sb": "cross-env NODE_ENV=development babel-node src/sandbox",
         "prebuild": "npm run tsc && npm run lint && npm test && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
@@ -24,6 +25,7 @@
         "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
         "lint": "npm run eslint && npm run stylelint",
         "eslint": "eslint src config --ext js,jsx,ts,tsx",
+        "eslint:fix": "eslint src config --ext js,jsx,ts,tsx --fix",
         "tsc": "tsc",
         "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
@@ -34,126 +36,126 @@
         "node": ">=9"
     },
     "dependencies": {
-        "@types/node": "^12.6.8",
+        "@types/node": "^12.12.14",
         "axios": "^0.19.0",
-        "bootstrap": "^4.3.1",
-        "connected-react-router": "^6.5.2",
-        "core-js": "^3.1.4",
-        "history": "^4.9.0",
-        "npm": "^6.10.2",
-        "react": "16.8.6",
-        "react-dom": "16.8.6",
+        "bootstrap": "^4.4.1",
+        "connected-react-router": "^6.6.1",
+        "core-js": "^3.4.7",
+        "history": "^4.10.1",
+        "npm": "^6.13.2",
+        "react": "16.11.0",
+        "react-dom": "16.12.0",
         "react-helmet": "^6.0.0-beta",
-        "react-redux": "^7.1.0",
-        "react-router": "^5.0.1",
-        "react-router-dom": "^5.0.1",
+        "react-redux": "^7.1.3",
+        "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
         "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.3.2"
+        "styled-components": "^4.4.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.5.5",
-        "@babel/node": "^7.5.5",
-        "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-        "@babel/preset-env": "^7.5.5",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.3.3",
-        "@hot-loader/react-dom": "16.8.6",
+        "@babel/core": "^7.7.5",
+        "@babel/node": "^7.7.4",
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+        "@babel/preset-env": "^7.7.6",
+        "@babel/preset-react": "^7.7.4",
+        "@babel/preset-typescript": "^7.7.4",
+        "@hot-loader/react-dom": "16.11.0",
         "@types/autoprefixer": "^9.5.0",
         "@types/axios": "^0.14.0",
         "@types/bootstrap": "^4.3.1",
         "@types/chalk": "^2.2.0",
         "@types/core-js": "^2.5.2",
-        "@types/enzyme": "^3.10.3",
+        "@types/enzyme": "^3.10.4",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/enzyme-to-json": "^1.5.3",
-        "@types/eslint": "^4.16.6",
+        "@types/eslint": "^6.1.3",
         "@types/eslint-plugin-prettier": "^2.2.0",
         "@types/history": "^4.7.2",
         "@types/html-webpack-plugin": "^3.2.1",
-        "@types/jest": "^24.0.16",
-        "@types/jest-cli": "^23.6.0",
+        "@types/jest": "^24.0.23",
+        "@types/jest-cli": "^24.3.0",
         "@types/jsdom": "^12.2.4",
         "@types/node-sass": "^4.11.0",
-        "@types/npm": "^2.0.30",
-        "@types/prettier": "^1.18.0",
-        "@types/react": "^16.8.23",
-        "@types/react-dom": "^16.8.5",
-        "@types/react-helmet": "^5.0.8",
-        "@types/react-hot-loader": "^4.1.0",
-        "@types/react-redux": "^7.1.1",
-        "@types/react-router": "^5.0.3",
-        "@types/react-router-dom": "^4.3.4",
+        "@types/npm": "^2.0.31",
+        "@types/prettier": "^1.19.0",
+        "@types/react": "^16.9.15",
+        "@types/react-dom": "^16.9.4",
+        "@types/react-helmet": "^5.0.14",
+        "@types/react-hot-loader": "^4.1.1",
+        "@types/react-redux": "^7.1.5",
+        "@types/react-router": "^5.1.3",
+        "@types/react-router-dom": "^5.1.3",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-logger": "^3.0.7",
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
-        "@types/rimraf": "^2.0.2",
-        "@types/styled-components": "^4.1.18",
+        "@types/rimraf": "^2.0.3",
+        "@types/styled-components": "^4.4.0",
         "@types/stylelint": "^9.10.1",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.32.1",
-        "@types/webpack-bundle-analyzer": "^2.13.2",
-        "@types/webpack-dev-server": "^3.1.7",
-        "@types/webpack-env": "^1.14.0",
-        "@typescript-eslint/eslint-plugin": "^1.13.0",
-        "@typescript-eslint/parser": "^1.13.0",
-        "autoprefixer": "^9.6.1",
+        "@types/webpack": "^4.41.0",
+        "@types/webpack-bundle-analyzer": "^2.13.3",
+        "@types/webpack-dev-server": "^3.9.0",
+        "@types/webpack-env": "^1.14.1",
+        "@typescript-eslint/eslint-plugin": "^2.10.0",
+        "@typescript-eslint/parser": "^2.10.0",
+        "autoprefixer": "^9.7.3",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "^10.0.2",
+        "babel-eslint": "^10.0.3",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-module-resolver": "^3.2.0",
-        "chalk": "^2.4.2",
-        "cross-env": "^5.2.0",
-        "css-loader": "^3.1.0",
+        "chalk": "^3.0.0",
+        "cross-env": "^6.0.3",
+        "css-loader": "^3.2.1",
         "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.14.0",
-        "enzyme-to-json": "^3.3.5",
-        "eslint": "^5.16.0",
-        "eslint-config-airbnb": "^17.1.1",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-import-resolver-typescript": "^1.1.1",
+        "enzyme-adapter-react-16": "^1.15.1",
+        "enzyme-to-json": "^3.4.3",
+        "eslint": "^6.7.2",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-prettier": "^6.7.0",
+        "eslint-import-resolver-typescript": "^2.0.0",
         "eslint-plugin-html": "^6.0.0",
         "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^22.14.0",
+        "eslint-plugin-jest": "^23.1.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.0",
-        "eslint-plugin-react": "^7.14.3",
-        "eslint-plugin-react-hooks": "^1.6.1",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.17.0",
+        "eslint-plugin-react-hooks": "^2.3.0",
         "eventsource-polyfill": "^0.9.6",
-        "file-loader": "^4.1.0",
+        "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.2",
+        "husky": "^3.1.0",
         "jest": "^24.8.0",
         "jest-cli": "^24.8.0",
-        "jsdom": "^15.1.1",
-        "node-sass": "^4.12.0",
+        "jsdom": "^15.2.1",
+        "node-sass": "^4.13.0",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0",
+        "prettier": "^1.19.1",
+        "prettier-eslint": "^9.0.1",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.12.10",
+        "react-hot-loader": "^4.12.18",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "rimraf": "^2.6.3",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1",
-        "stylelint": "^10.1.0",
-        "stylelint-config-prettier": "^5.2.0",
-        "stylelint-config-recommended": "^2.2.0",
+        "rimraf": "^3.0.0",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.1",
+        "stylelint": "^12.0.0",
+        "stylelint-config-prettier": "^7.0.0",
+        "stylelint-config-recommended": "^3.0.0",
         "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.8.0",
-        "typescript": "^3.5.3",
-        "url-loader": "^2.1.0",
-        "webpack": "^4.38.0",
-        "webpack-bundle-analyzer": "^3.4.1",
-        "webpack-cli": "^3.3.6",
-        "webpack-dev-server": "^3.7.2"
+        "stylelint-processor-styled-components": "^1.9.0",
+        "typescript": "^3.7.3",
+        "url-loader": "^3.0.0",
+        "webpack": "^4.41.2",
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.9.0"
     },
     "browserslist": [
         "> 0.5%",
