--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,7 +15,7 @@
         "jvitor83.types-autoinstaller",
         "msjsdiag.debugger-for-chrome",
         "vscode-icons-team.vscode-icons",
-        "thibaudcolas.stylelint",
+        "stylelint.vscode-stylelint",
         "streetsidesoftware.code-spell-checker",
         "xabikos.ReactSnippets"
     ]
