--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,3 @@
 {
-    "processors": ["stylelint-processor-styled-components"],
-    "extends": [
-        "stylelint-config-recommended",
-        "stylelint-config-styled-components",
-        "stylelint-config-prettier"
-    ]
+    "extends": ["stylelint-config-recommended", "stylelint-config-prettier"]
 }
