--- a/package.json
+++ b/package.json
@@ -29,59 +29,61 @@
         "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
         "test:coverage": "npm run test -- --coverage",
-        "test:watch": "npm run test -- --watch"
+        "test:watch": "npm run test -- --watch",
+        "sb": "babel-node temp/sandbox"
     },
     "engines": {
         "node": ">=9"
     },
     "dependencies": {
-        "@types/node": "^13.5.1",
+        "@types/node": "^13.9.0",
+        "@types/react-helmet-async": "^1.0.3",
         "axios": "^0.19.2",
-        "connected-react-router": "^6.6.1",
+        "connected-react-router": "^6.7.0",
         "core-js": "^3.6.4",
         "history": "^4.10.1",
         "normalize.css": "^8.0.1",
-        "npm": "^6.13.7",
-        "react": "16.11.0",
+        "npm": "^6.14.2",
+        "react": "16.12.0",
         "react-dom": "16.12.0",
-        "react-helmet": "^6.0.0-beta.2",
-        "react-redux": "^7.1.3",
+        "react-helmet-async": "^1.0.4",
+        "react-owl-carousel2": "^0.3.0",
+        "react-redux": "^7.2.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0",
-        "styled-components": "^5.0.0"
+        "reselect": "^4.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.3",
-        "@babel/node": "^7.8.3",
+        "@babel/core": "^7.8.7",
+        "@babel/node": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-env": "^7.8.7",
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
-        "@hot-loader/react-dom": "16.11.0",
-        "@types/autoprefixer": "^9.5.0",
+        "@hot-loader/react-dom": "16.12.0",
+        "@types/autoprefixer": "^9.7.0",
         "@types/axios": "^0.14.0",
         "@types/chalk": "^2.2.0",
-        "@types/core-js": "^2.5.2",
-        "@types/enzyme": "^3.10.4",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/core-js": "^2.5.3",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/enzyme-to-json": "^1.5.3",
-        "@types/eslint": "^6.1.7",
+        "@types/eslint": "^6.1.8",
         "@types/eslint-plugin-prettier": "^2.2.0",
-        "@types/history": "^4.7.4",
-        "@types/html-webpack-plugin": "^3.2.1",
-        "@types/jest": "^25.1.0",
+        "@types/history": "^4.7.5",
+        "@types/html-webpack-plugin": "^3.2.2",
+        "@types/jest": "^25.1.4",
         "@types/jest-cli": "^24.3.0",
-        "@types/jsdom": "^12.2.4",
+        "@types/jsdom": "^16.1.0",
+        "@types/mini-css-extract-plugin": "^0.9.1",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.31",
+        "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
         "@types/prettier": "^1.19.0",
-        "@types/react": "^16.9.19",
+        "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
-        "@types/react-helmet": "^5.0.15",
         "@types/react-hot-loader": "^4.1.1",
         "@types/react-redux": "^7.1.7",
         "@types/react-router": "^5.1.4",
@@ -92,47 +94,50 @@
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.3",
-        "@types/styled-components": "^4.4.2",
         "@types/stylelint": "^9.10.1",
+        "@types/terser-webpack-plugin": "^2.2.0",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.41.3",
+        "@types/webpack": "^4.41.7",
         "@types/webpack-bundle-analyzer": "^2.13.3",
-        "@types/webpack-dev-server": "^3.9.0",
-        "@types/webpack-env": "^1.15.0",
-        "@typescript-eslint/eslint-plugin": "^2.18.0",
-        "@typescript-eslint/parser": "^2.18.0",
+        "@types/webpack-dev-server": "^3.10.0",
+        "@types/webpack-env": "^1.15.1",
+        "@types/webpack-merge": "^4.1.5",
+        "@typescript-eslint/eslint-plugin": "^2.22.0",
+        "@typescript-eslint/parser": "^2.22.0",
         "autoprefixer": "^9.7.4",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "^10.0.3",
+        "babel-eslint": "^10.1.0",
         "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.6",
-        "babel-plugin-module-resolver": "^3.2.0",
+        "babel-plugin-module-resolver": "^4.0.0",
         "chalk": "^3.0.0",
-        "cross-env": "^7.0.0",
+        "cross-env": "^7.0.2",
         "css-loader": "^3.4.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme-to-json": "^3.4.3",
+        "enzyme-to-json": "^3.4.4",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-prettier": "^6.10.0",
         "eslint-import-resolver-typescript": "^2.0.0",
         "eslint-plugin-html": "^6.0.0",
-        "eslint-plugin-import": "^2.20.0",
-        "eslint-plugin-jest": "^23.6.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jest": "^23.8.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
-        "eslint-plugin-react": "^7.18.0",
-        "eslint-plugin-react-hooks": "^2.3.0",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^2.5.0",
         "eventsource-polyfill": "^0.9.6",
-        "file-loader": "^5.0.2",
+        "file-loader": "^5.1.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^4.2.1",
+        "husky": "^4.2.3",
         "jest": "^25.1.0",
         "jest-cli": "^25.1.0",
-        "jsdom": "^15.2.1",
+        "jsdom": "^16.2.0",
+        "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
-        "postcss-flexbugs-fixes": "^4.1.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "postcss-flexbugs-fixes": "^4.2.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.19.1",
         "prettier-eslint": "^9.0.1",
@@ -140,20 +145,20 @@
         "react-hot-loader": "^4.12.19",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "rimraf": "^3.0.1",
+        "rimraf": "^3.0.2",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "stylelint": "^13.0.0",
-        "stylelint-config-prettier": "^7.0.0",
+        "stylelint": "^13.2.0",
+        "stylelint-config-prettier": "^8.0.1",
         "stylelint-config-recommended": "^3.0.0",
-        "stylelint-config-styled-components": "^0.1.1",
-        "stylelint-processor-styled-components": "^1.9.0",
-        "typescript": "^3.7.5",
+        "terser-webpack-plugin": "^2.3.5",
+        "typescript": "^3.8.3",
         "url-loader": "^3.0.0",
-        "webpack": "^4.41.5",
+        "webpack": "^4.42.0",
         "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3",
+        "webpack-merge": "^4.2.2"
     },
     "browserslist": [
         "> 0.5%",
