--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "reactplate",
-    "version": "0.0.2",
-    "author": "Piotr Piech <piotr@hadron.design>",
+    "version": "0.0.3",
+    "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
     "description": "TypeScript parsed with Babel 7 | React, Redux, Jest & 🔥 reload | ESLint + @typescript-eslint",
     "repository": {
@@ -13,41 +13,37 @@
     },
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "scripts": {
-        "postinstall": "rimraf ./node_modules/@types/react-native",
         "start": "cross-env NODE_ENV=development npm run open:src",
         "prebuild": "npm run tsc && npm run lint && npm test && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
-        "build:quick": "cross-env NODE_ENV=production babel-node config/build",
+        "build:skip": "cross-env NODE_ENV=production babel-node config/build",
         "cleanDist": "rimraf ./dist && mkdir dist",
-        "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
-        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
-        "lint": "npm run eslint && npm run stylelint",
         "eslint": "eslint src config --ext js,jsx,ts,tsx",
         "eslint:fix": "eslint src config --ext js,jsx,ts,tsx --fix",
+        "stylelint": "stylelint **/*.scss **/*.css",
+        "lint": "npm run eslint && npm run stylelint",
+        "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
+        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
         "tsc": "tsc",
-        "stylelint": "stylelint **/*.jsx **/*.js **/*.ts **/*.tsx",
         "test": "cross-env NODE_ENV=test jest",
+        "test:update": "npm run test -- --update",
         "test:coverage": "npm run test -- --coverage",
-        "test:watch": "npm run test -- --watch",
-        "sb": "babel-node temp/sandbox"
+        "test:watch": "npm run test -- --watch"
     },
     "engines": {
         "node": ">=9"
     },
     "dependencies": {
-        "@types/node": "^13.9.0",
-        "@types/react-helmet-async": "^1.0.3",
         "axios": "^0.19.2",
-        "connected-react-router": "^6.7.0",
-        "core-js": "^3.6.4",
+        "connected-react-router": "^6.8.0",
+        "core-js": "^3.6.5",
         "history": "^4.10.1",
         "normalize.css": "^8.0.1",
-        "npm": "^6.14.2",
-        "react": "16.12.0",
-        "react-dom": "16.12.0",
-        "react-helmet-async": "^1.0.4",
-        "react-owl-carousel2": "^0.3.0",
+        "npm": "^6.14.4",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-helmet-async": "^1.0.5",
         "react-redux": "^7.2.0",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
@@ -56,106 +52,114 @@
         "reselect": "^4.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.7",
+        "@babel/core": "^7.9.0",
         "@babel/node": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-react": "^7.8.3",
-        "@babel/preset-typescript": "^7.8.3",
-        "@hot-loader/react-dom": "16.12.0",
-        "@types/autoprefixer": "^9.7.0",
+        "@babel/preset-env": "^7.9.5",
+        "@babel/preset-react": "^7.9.4",
+        "@babel/preset-typescript": "^7.9.0",
+        "@hot-loader/react-dom": "16.13.0",
+        "@types/autoprefixer": "^9.7.2",
         "@types/axios": "^0.14.0",
         "@types/chalk": "^2.2.0",
+        "@types/circular-dependency-plugin": "^5.0.0",
         "@types/core-js": "^2.5.3",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/enzyme-to-json": "^1.5.3",
-        "@types/eslint": "^6.1.8",
-        "@types/eslint-plugin-prettier": "^2.2.0",
+        "@types/eslint": "^6.8.0",
+        "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/history": "^4.7.5",
         "@types/html-webpack-plugin": "^3.2.2",
-        "@types/jest": "^25.1.4",
+        "@types/immutable": "^3.8.7",
+        "@types/jest": "^25.2.1",
         "@types/jest-cli": "^24.3.0",
-        "@types/jsdom": "^16.1.0",
+        "@types/jsdom": "^16.2.1",
         "@types/mini-css-extract-plugin": "^0.9.1",
+        "@types/node": "^13.13.1",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.31",
         "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-        "@types/prettier": "^1.19.0",
-        "@types/react": "^16.9.23",
-        "@types/react-dom": "^16.9.5",
+        "@types/prettier": "^2.0.0",
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.6",
         "@types/react-hot-loader": "^4.1.1",
         "@types/react-redux": "^7.1.7",
-        "@types/react-router": "^5.1.4",
-        "@types/react-router-dom": "^5.1.3",
+        "@types/react-router": "^5.1.5",
+        "@types/react-router-dom": "^5.1.4",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-logger": "^3.0.7",
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
-        "@types/rimraf": "^2.0.3",
+        "@types/rimraf": "^3.0.0",
         "@types/stylelint": "^9.10.1",
         "@types/terser-webpack-plugin": "^2.2.0",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.41.7",
+        "@types/webpack": "^4.41.12",
         "@types/webpack-bundle-analyzer": "^2.13.3",
-        "@types/webpack-dev-server": "^3.10.0",
+        "@types/webpack-dev-server": "^3.10.1",
         "@types/webpack-env": "^1.15.1",
         "@types/webpack-merge": "^4.1.5",
-        "@typescript-eslint/eslint-plugin": "^2.22.0",
-        "@typescript-eslint/parser": "^2.22.0",
-        "autoprefixer": "^9.7.4",
+        "@typescript-eslint/eslint-plugin": "^2.29.0",
+        "@typescript-eslint/parser": "^2.29.0",
+        "autoprefixer": "^9.7.6",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.1.0",
-        "babel-jest": "^25.1.0",
-        "babel-loader": "^8.0.6",
+        "babel-jest": "^25.4.0",
+        "babel-loader": "^8.1.0",
         "babel-plugin-module-resolver": "^4.0.0",
-        "chalk": "^3.0.0",
+        "chalk": "^4.0.0",
+        "circular-dependency-plugin": "^5.2.0",
         "cross-env": "^7.0.2",
-        "css-loader": "^3.4.2",
+        "css-loader": "^3.5.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.4",
         "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.0.1",
-        "eslint-config-prettier": "^6.10.0",
+        "eslint-config-airbnb": "^18.1.0",
+        "eslint-config-prettier": "^6.10.1",
         "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-html": "^6.0.0",
-        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-html": "^6.0.2",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jest": "^23.8.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^2.5.0",
+        "eslint-plugin-react-hooks": "~2.4.0",
         "eventsource-polyfill": "^0.9.6",
-        "file-loader": "^5.1.0",
-        "html-webpack-plugin": "^3.2.0",
-        "husky": "^4.2.3",
-        "jest": "^25.1.0",
-        "jest-cli": "^25.1.0",
-        "jsdom": "^16.2.0",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.2.0",
+        "husky": "^4.2.5",
+        "immutable": "^4.0.0-rc.12",
+        "jest": "^25.4.0",
+        "jest-cli": "^25.4.0",
+        "jsdom": "^16.2.2",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-flexbugs-fixes": "^4.2.0",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.19.1",
+        "prettier": "^2.0.5",
         "prettier-eslint": "^9.0.1",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.12.19",
+        "react-hot-loader": "^4.12.20",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
         "rimraf": "^3.0.2",
         "sass-loader": "^8.0.2",
-        "style-loader": "^1.1.3",
-        "stylelint": "^13.2.0",
+        "seamless-immutable": "^7.1.4",
+        "style-loader": "^1.1.4",
+        "stylelint": "^13.3.3",
         "stylelint-config-prettier": "^8.0.1",
         "stylelint-config-recommended": "^3.0.0",
+        "stylelint-config-recommended-scss": "^4.2.0",
+        "stylelint-scss": "^3.17.1",
         "terser-webpack-plugin": "^2.3.5",
         "typescript": "^3.8.3",
-        "url-loader": "^3.0.0",
-        "webpack": "^4.42.0",
-        "webpack-bundle-analyzer": "^3.6.0",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^3.7.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
         "webpack-merge": "^4.2.2"
