--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,16 @@
 {
-    "extends": ["stylelint-config-recommended", "stylelint-config-prettier"]
+    "plugin": ["stylelint-scss"],
+    "extends": [
+        "stylelint-config-recommended",
+        "stylelint-config-prettier",
+        "stylelint-config-recommended-scss"
+    ],
+    "rules": {
+        "selector-pseudo-class-no-unknown": [
+            true,
+            {
+                "ignorePseudoClasses": ["global"]
+            }
+        ]
+    }
 }
